<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.equipo_adsi.virtualkey1.RegistroSingUp">



    <TextView
        android:id="@+id/nombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/ingresenombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_their_names"
        android:inputType="text"
        />


    <TextView
        android:id="@+id/apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        android:textColor="#000"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/ingreseapellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_surname"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/documento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/document"
        android:textColor="#000"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/ingresedocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_of_your_document"
        android:inputType="date"
        />


    <TextView
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#000"
        android:textSize="20dp"
        />


    <EditText
        android:id="@+id/ingresecorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="text"/>


    <TextView
        android:id="@+id/contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_your_password"
        android:textColor="#000"
        android:textSize="20dp"
        />


    <EditText
        android:id="@+id/ingresecontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="text"/>

    <TextView
        android:id="@+id/repitacontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_your_password"
        android:textColor="#000"
        android:textSize="20dp"
        />


    <EditText
        android:id="@+id/Repitcontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
       style="@style/Button"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

</LinearLayout>
