<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.equipo_adsi.virtualkey1.Restablecer">


    <TextView
        android:id="@+id/restablecer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset_your_password"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_marginTop="15dp"

        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/logo"
        android:layout_below="@+id/restablecer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />


    <TextView
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="20dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        />


    <EditText
        android:id="@+id/ingresecontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="text"
        android:layout_below="@id/correo"
        android:layout_marginTop="15dp"

        />

    <Button
        android:id="@+id/btnenviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_below="@id/ingresecontraseña"
        android:layout_centerHorizontal="true"
        style="@style/Button"
        android:layout_marginTop="15dp"

        />

</RelativeLayout>
