<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.equipo_adsi.virtualkey1.LoginSignIn">


    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:textColor="#0099FF"

        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/logo"
        android:layout_below="@+id/nombre"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="20dp"
        android:layout_below="@+id/logo"

        />
    <EditText
        android:id="@+id/ingresecorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="  "
        android:layout_below="@+id/correo"

        />

    <TextView
        android:id="@+id/contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:textSize="20dp"
        android:layout_below="@+id/ingresecorreo"

        />



    <EditText
        android:id="@+id/ingresecontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="  "
        android:layout_below="@+id/contraseña"

        />
    <Button
        android:id="@+id/ingresar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/get_in"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ingresecontraseña"
        android:textSize="20dp"
        style="@style/Button"

        />
    <TextView
        android:id="@+id/olvidastecontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forgot_password"
        android:textColor="#0099FF"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ingresar"
        android:textSize="18dp"

        />


</RelativeLayout>
